# watchexec.github.io

./: 404.html  README.md  SUMMARY.md  book.toml  colours-ce43ece5.css  colours.css  generators.yml  index.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-12f3009b.js  searchindex-163b0787.js  searchindex-258a270f.js  searchindex-45fe3fb7.js  searchindex-52d0f8cb.js  searchindex-aeced093.js  searchindex-b7376d86.js  searchindex-c88219f5.js  searchindex-c8e46eea.js  searchindex-e3cd83db.js  searchindex.js  searchindex.json  style.css  toc-3d244622.js  toc-4aca35ff.js  toc-e2572de8.js  toc-f0b6384c.js  toc-f7c27c4d.js  toc.html
.github/workflows/: cargo-watch-release.yml  deploy.yml  watchexec-release.yml
_bin/: generator  make-release  rerender-all
_generator/: Cargo.toml
_generator/src/: config.rs  main.rs  meta.rs  release.rs
_templates/: downloads-page.html  release-index.html  release-page.html  tables.html.j2
blog/: cargo-watch-9.html  road-to-watchexec-2-tokio.html  road-to-watchexec-2.html
docs/: glob-patterns.html  index.html  inotify-limits.html  macos-fsevents.html
docs/cargo-watch/: index.html
docs/cli/: index.html
docs/watchexec/: index.html
downloads/: index.html
downloads/cargo-watch/: index.html  latest.json
downloads/cargo-watch/4.0.0/: index.html  meta.json
downloads/cargo-watch/4.0.1/: index.html
downloads/cargo-watch/4.0.2/: index.html
downloads/cargo-watch/4.0.3/: index.html
downloads/watchexec/: index.html  latest.json
generator/: Cargo.toml
generator/src/: config.rs  main.rs  meta.rs  release.rs
generator/templates/: SUMMARY.md  downloads-index.md  release-index.md  release.md  tables.md.j2
src/: SUMMARY.md  colours.css  index-style.css  index.html
src/blog/: cargo-watch-9.md  road-to-watchexec-2-tokio.md  road-to-watchexec-2.md
src/docs/: glob-patterns.md  inotify-limits.md  macos-fsevents.md
src/downloads/: index.md
theme/: head.hbs
(+465 files in other folders)
